--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @import "tailwindcss";
 @plugin "flowbite-react/plugin/tailwindcss";
 @source "../.flowbite-react/class-list.json";
+
+@font-face {
+    font-family: "Poppins";
+    src: url("./assets/Fonts/Inter/static/Inter_18pt-Regular.ttf") format("woff2");
+  }
+  
